Swapped git and php in list position

--- a/views/resume.haml
+++ b/views/resume.haml
@@ -31,7 +31,7 @@
     %h3 
       Development 
       .note (the order is somewhat relevant)
-    %p Ruby, Rails, Javascript, PHP, XHTML, CSS, Git
+    %p Ruby, Rails, Javascript, Git, XHTML, CSS, PHP
 
   %li
     %h3 Software
