Edit Aspirations section

--- a/views/resume.haml
+++ b/views/resume.haml
@@ -90,12 +90,13 @@
 %ol
   %li
     %h3 Community
-    %p Contribute more code. I&rsquo;ve been working harder to work on open source projects and to write more.
-    %p I want to teach. Really, I just want to learn more, but I think teaching will help me learn things on a deeper level. (helping people is a nice bonus too)
+    %p Write, contribute, and release more code
+    %p Teach, to better educate others as well as myself
     
   %li
     %h3 Career
-    %p I&rsquo;m not looking for a job, I&rsquo;m looking for something that will challenge me to do my best, to learn new things, and to always look ahead.
+    %p It will challenge me to do my best, to learn new things, and to always look ahead.
+
     
 %h2 Education
 
