Edit Aspirations section

--- a/views/resume.haml
+++ b/views/resume.haml
@@ -95,7 +95,7 @@
     
   %li
     %h3 Career
-    %p It will challenge me to do my best, to learn new things, and to always look ahead.
+    %p It will challenge me to do my best, to learn new things, and to always look ahead
 
     
 %h2 Education
