Edit Aspirations section

--- a/views/resume.haml
+++ b/views/resume.haml
@@ -90,12 +90,12 @@
 %ol
   %li
     %h3 Community
-    %p Write, contribute, and release more code
-    %p Teach, to better educate others as well as myself
+    %p To write, contribute, and release more code
+    %p Teaching, to better educate others as well as myself
     
   %li
     %h3 Career
-    %p It will challenge me to do my best, to learn new things, and to always look ahead
+    %p One that challenge me to do my best, to learn new things, and to always look ahead
 
     
 %h2 Education
