--- a/views/resume.haml
+++ b/views/resume.haml
@@ -1,23 +1,7 @@
-
-%hgroup
-  %img{ :src => Gravatar.new("matthew.willhite@gmail.com").image_url, :alt => "Picture of Matthew Willhite" } 
-  %h1 Matthew Willhite
-  %ol
-    %li 
-      %a{ :href => "mailto:matthew.willhite@gmail.com?subject=Come work for us!" } matthew.willhite@gmail.com
-    %li
-      miwillhite on 
-      %a{ :href => "http://github.com/miwillhite" } github 
-      |
-      %a{ :href => "http://twitter.com/miwillhite" } twitter
-
-    %li 1-503-777-7365
-        
-    
 %h2 Objective
 %p.mission
   %strong To practice web development.
-  / Couldn't really think of anything else to say here -- it was all expanding on the same basic idea. I'm disappointed that the <blink> tag doesn't work anymore though, that would have been a nice touch, I think.
+  / Couldn't really think of anything else to say here - it was all expanding on the same basic idea. I'm disappointed that the <blink> tag doesn't work anymore though, that would have been a nice touch, I think.
 
    
 %h2 Skills
@@ -30,7 +14,7 @@
   %li
     %h3 
       Development 
-      .note (the order is somewhat relevant)
+      %span.note (the order is somewhat relevant)
     %p Ruby, Rails, Javascript, Git, XHTML, CSS, PHP
 
   %li
