--- a/views/styles.sass
+++ b/views/styles.sass
@@ -22,7 +22,7 @@ body
     :size .75em
   :line-height 1.2em
   
-hgroup, ol
+header, ol
   :display block
   :margin-bottom $section_break
   ol li
@@ -32,7 +32,6 @@ hgroup, ol
     :margin
       :right 10px
       :top -4px
-    
   
 ol li
   :margin-bottom $section_break / 2
