URL encoded email subject parameter

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -15,7 +15,7 @@
       %h1 Matthew Willhite
       %ol
         %li 
-          %a{ :href => "mailto:matthew.willhite@gmail.com?subject=Come work for us!" } matthew.willhite@gmail.com
+          %a{ :href => "mailto:matthew.willhite@gmail.com?subject=Come%20work%20for%20us%21" } matthew.willhite@gmail.com
         %li
           miwillhite on 
           %a{ :href => "http://github.com/miwillhite" } github 
