Removed git from languages list

--- a/views/resume.haml
+++ b/views/resume.haml
@@ -15,7 +15,7 @@
     %h3 
       Development 
       %span.note (the order is somewhat relevant)
-    %p Ruby, Rails, Javascript, Git, XHTML, CSS, PHP
+    %p Ruby, Rails, Javascript, XHTML, CSS, PHP
 
   %li
     %h3 Software
