--- a/views/resume.haml
+++ b/views/resume.haml
@@ -29,7 +29,7 @@
     %h3
       Fleet Ventures |
       %em Project Lead / Developer
-    %p.desc Ruby/Javascript development, and UI/UX design
+    %p.desc Ruby/Javascript development and UI/UX design
     %p.date Winter 2010 &#8211; Present
 
   %li
@@ -58,7 +58,7 @@
     %h3
       Shorthand Media |
       %em Developer / Designer
-    %p.desc Assistance in Actionscript programming in websites and flash-based applications
+    %p.desc Actionscript programming in websites and flash-based applications
     %p.date Fall 2007 &#8211; Winter 2008
 
   %li
@@ -79,7 +79,7 @@
     
   %li
     %h3 Career
-    %p One that challenge me to do my best, to learn new things, and to always look ahead
+    %p One that challenges me to do my best, to learn new things, and to always look ahead
 
     
 %h2 Education
