Added favicon and converted ems to i's when appropriate

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,7 +6,8 @@
     %meta{ :name => "description", :content => "Resumé for Matthew Willhite" }
 
     %title Matthew Willhite | Resumé
-
+    
+    %link{ :rel => "shortcut icon", :href => "/images/favicon.ico" } 
     %link{ :rel => "stylesheet", :href => "/stylesheets/styles.css" }
 
   %body
