--- a/views/resume.haml
+++ b/views/resume.haml
@@ -14,7 +14,7 @@
   %li
     %h3 
       Development 
-      %span.note (the order is somewhat relevant)
+      %i (the order is somewhat relevant)
     %p Ruby, Rails, Javascript, XHTML, CSS, PHP
 
   %li
@@ -26,45 +26,45 @@
 
 %ol
   %li
-    %h3
-      Fleet Ventures |
-      %em Project Lead / Developer
+    %h3 
+      Fleet Ventures
+      %i Project Lead / Developer
     %p.desc Ruby/Javascript development and UI/UX design
     %p.date Winter 2010 &#8211; Present
 
   %li
     %h3
-      Squid Graphic Design |
-      %em Partner / Designer / Developer / Project Manager
+      Squid Graphic Design
+      %i Partner / Designer / Developer / Project Manager
     %p.desc Full service graphic design studio: project management, print/web design, and website development
     %p.date Fall 2007 &#8211; Winter 2010
 
   %li
     %h3
-      Manifest Web design |
-      %em Designer / Developer
+      Manifest Web design
+      %i Designer / Developer
     %p.desc Website design and development
     %p.date Summer 2009 &#8211; Winter 2010
 
   %li
     %h3
-      PosterGarden |
-      %em Creative Specialist
+      PosterGarden
+      %i Creative Specialist
     %p.desc
       Trade show display design, graphic output, website design/development
     %p.date Fall 2006 &#8211; Summer 2009
 
   %li
     %h3
-      Shorthand Media |
-      %em Developer / Designer
+      Shorthand Media
+      %i Developer / Designer
     %p.desc Actionscript programming in websites and flash-based applications
     %p.date Fall 2007 &#8211; Winter 2008
 
   %li
     %h3
-      World Forest Investment |
-      %em Designer / Developer
+      World Forest Investment
+      %i Designer / Developer
     %p.desc Identity design, implementation of promotional materials and company website
     %p.date Spring 2004 &#8211; Winter 2010
 
