--- a/views/styles.sass
+++ b/views/styles.sass
@@ -63,12 +63,11 @@ h3
   :color $prominent
   :margin-bottom 3px
   
-  em
+  i
     :color $normal
     
   .note
     @extend em
-    :display inline
 
 h4
   :font-size 1.1em
@@ -78,7 +77,7 @@ strong
   :color $prominent
   :background $highlight
 
-em
+i
   :font-family Georgia, serif
   :font-style italic
   :text-transform none
