Added conditional element creation for IE

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -9,6 +9,9 @@
     
     %link{ :rel => "shortcut icon", :href => "/images/favicon.ico" } 
     %link{ :rel => "stylesheet", :href => "/stylesheets/styles.css" }
+    
+    /[if IE]
+      %script{ :src => "http://html5shiv.googlecode.com/svn/trunk/html5.js" }
 
   %body
     %header
