Added Dreyfus model to skillset

--- a/views/resume.haml
+++ b/views/resume.haml
@@ -1,8 +1,7 @@
 %h2 Objective
-%p.mission
-  %strong To practice web development.
-  / Couldn't really think of anything else to say here - it was all expanding on the same basic idea. I'm disappointed that the <blink> tag doesn't work anymore though, that would have been a nice touch, I think.
-
+%p.objective
+  %strong To exceed my own expectations. 
+  / This still needs help, not sure how to tie it back to the company
    
 %h2 Skills
 
@@ -14,12 +13,14 @@
   %li
     %h3 
       Development 
-      %i (the order is somewhat relevant)
-    %p Ruby, Rails, Javascript, XHTML, CSS, PHP
+      %i Using the <a href="http://pragmaticstudio.com/dreyfus">Dreyfus Model</a> as a loose guide
+    %p Ruby (Proficient), Rails (Proficient), Javascript (Proficient), XHTML (Expert), CSS (Expert), PHP (Advanced Beginner)
 
   %li
-    %h3 Software
-    %p Textmate, XMind, Photoshop, Illustrator, InDesign, Flash, Fireworks, Google Docs
+    %h3 
+      Software
+      %i Proficient in all
+    %p Textmate, XMind, Photoshop, Illustrator, InDesign, Flash, Fireworks, Google Docs, Pivotal Tracker
 
 
 %h2 Experiences
