Filling out experiences

--- a/views/styles.sass
+++ b/views/styles.sass
@@ -20,9 +20,13 @@ body
     :family Verdana, sans-serif
     :weight normal
     :size .75em
+  :line-height 1.5em
+
+header
   :line-height 1.2em
   
 header, ol
+  :max-width 800px
   :display block
   :margin-bottom $section_break
   ol li
