--- a/views/resume.haml
+++ b/views/resume.haml
@@ -1,6 +1,6 @@
 %h2 Objective
 %p.objective
-  %strong To exceed my own expectations. 
+  %strong To exceed my own expectations.
   / This still needs help, not sure how to tie it back to the company
    
 %h2 Skills
@@ -19,7 +19,7 @@
   %li
     %h3 
       Software
-      %i Proficient in all
+      %i Proficient in all of the following
     %p Textmate, XMind, Photoshop, Illustrator, InDesign, Flash, Fireworks, Google Docs, Pivotal Tracker
 
 
@@ -30,21 +30,21 @@
     %h3 
       Fleet Ventures
       %i Project Lead / Developer
-    %p.desc Ruby/Javascript development and UI/UX design
+    %p.desc Working as project lead, organizing an international team for the company&rsquo;s primary client. Collaborate with the client regularly on usability and application design. Initiated and led in implementing an entire redesign/refactorization of the project to be more efficient, easier to maintain, and gearing up for future technologies (HTML5, Rails 3). Developed a non-trivial jquery plugin that is used in each the company's other projects.
     %p.date Winter 2010 &#8211; Present
 
   %li
     %h3
       Squid Graphic Design
       %i Partner / Designer / Developer / Project Manager
-    %p.desc Full service graphic design studio: project management, print/web design, and website development
+    %p.desc Conceived, developed, and maintained a full-service graphic design studio. Designed and implemented dozens of websites (using both Ruby on Rails and PHP), logos, and various printed materials. Managed the accounting, clients, and projects. Worked in collaboration with business partner on design and handled all of the website development.
     %p.date Fall 2007 &#8211; Winter 2010
 
   %li
     %h3
       Manifest Web design
       %i Designer / Developer
-    %p.desc Website design and development
+    %p.desc Worked primarily as a front-end developer and graphic designer. Introduced and converted the team to Git (from SVN) and helped them pick up Ruby on Rails (primarily a PHP shop). Interacted regularly with clients to collaborate on design, workflow, and content strategy. Designed and assisted in the implemented almost a dozen websites.
     %p.date Summer 2009 &#8211; Winter 2010
 
   %li
@@ -52,21 +52,21 @@
       PosterGarden
       %i Creative Specialist
     %p.desc
-      Trade show display design, graphic output, website design/development
+      Sole designer of large format graphic displays. Developed/designed an online version of the company&rsquo;s promotional magazine using Rails. Also created an automated archiving system using Ruby.
     %p.date Fall 2006 &#8211; Summer 2009
 
   %li
     %h3
       Shorthand Media
-      %i Developer / Designer
-    %p.desc Actionscript programming in websites and flash-based applications
+      %i Developer
+    %p.desc Worked in tight collaboration with employer to create Flash applications and websites using Actionscript 2.0, backed by XML. 
     %p.date Fall 2007 &#8211; Winter 2008
 
   %li
     %h3
       World Forest Investment
       %i Designer / Developer
-    %p.desc Identity design, implementation of promotional materials and company website
+    %p.desc Primary designer and developer. Worked closely with the employer to produce a variety of printed marketing materials and multiple specialized websites. 
     %p.date Spring 2004 &#8211; Winter 2010
 
 
@@ -75,12 +75,13 @@
 %ol
   %li
     %h3 Community
-    %p To write, contribute, and release more code
-    %p Teaching, to better educate others as well as myself
+    %p To write, contribute, and release more code. 
+    %p Teaching, to better educate others as well as myself. I aspire to speak at conferences and help out at local workshops.
+    %p To participate in more users groups (currently I frequent refreshpdx, pdxruby, javascript admirers group, and the newly formed semantic web group)
     
   %li
     %h3 Career
-    %p One that challenges me to do my best, to learn new things, and to always look ahead
+    %p One that challenges me to do my best, to learn new things, and to always look ahead.     
 
     
 %h2 Education
