Added urls for user groups

--- a/views/resume.haml
+++ b/views/resume.haml
@@ -77,11 +77,19 @@
     %h3 Community
     %p To write, contribute, and release more code. 
     %p Teaching, to better educate others as well as myself. I aspire to speak at conferences and help out at local workshops.
-    %p To participate in more users groups (currently I frequent refreshpdx, pdxruby, javascript admirers group, and the newly formed semantic web group)
+    %p To participate in more local groups (currently I frequent <a href="http://refreshpdx.com">Portland Refresh</a>, <a href="http://pdxruby.com">Portland Ruby Brigade</a>, <a href="http://pdxjs.com/">Portland Javascript Admirers</a>, and the newly formed <a href="http://www.meetup.com/pdxsemweb/">Semantic Web Interest Group</a>).
     
   %li
     %h3 Career
-    %p One that challenges me to do my best, to learn new things, and to always look ahead.     
+    %p One that challenges me to do my best, to learn new things, and to always look ahead. 
+    
+
+%h2 Interests
+
+%ol
+  %li
+    %h3 Technologies
+    %p Experimenting and exploring things like RDF/OWL, Node.js, UX, and a little machine learning.
 
     
 %h2 Education
