Edited copy and styles

--- a/views/resume.haml
+++ b/views/resume.haml
@@ -8,7 +8,7 @@
 %ol
   %li 
     %h3 General
-    %p Problem Solving, Learning, Teaching, Researching, Debugging, Drawing
+    %p Problem Solving, Learning, Teaching, Researching
     
   %li
     %h3 
@@ -19,7 +19,7 @@
   %li
     %h3 
       Software
-      %i Proficient in all of the following
+      %i Proficient in each of the following
     %p Textmate, XMind, Photoshop, Illustrator, InDesign, Flash, Fireworks, Google Docs, Pivotal Tracker
 
 
@@ -30,7 +30,7 @@
     %h3 
       Fleet Ventures
       %i Project Lead / Developer
-    %p.desc Working as project lead, organizing an international team for the company&rsquo;s primary client. Collaborate with the client regularly on usability and application design. Initiated and led in implementing an entire redesign/refactorization of the project to be more efficient, easier to maintain, and gearing up for future technologies (HTML5, Rails 3). Developed a non-trivial jquery plugin that is used in each the company's other projects.
+    %p.desc Working as project lead and organizing an international team for the company&rsquo;s primary client. Collaborate with the client regularly on usability and application design. Initiated and led in implementing an entire redesign/refactorization of the project to be more efficient, easier to maintain, and gearing up for future technologies (HTML5, Rails 3). Developed a non-trivial jquery plugin that is used in each the company&rsquo;s other projects.
     %p.date Winter 2010 &#8211; Present
 
   %li
@@ -44,7 +44,7 @@
     %h3
       Manifest Web design
       %i Designer / Developer
-    %p.desc Worked primarily as a front-end developer and graphic designer. Introduced and converted the team to Git (from SVN) and helped them pick up Ruby on Rails (primarily a PHP shop). Interacted regularly with clients to collaborate on design, workflow, and content strategy. Designed and assisted in the implemented almost a dozen websites.
+    %p.desc Worked primarily as a front-end developer and graphic designer. Introduced and converted the team to Git (from SVN) and helped them pick up Ruby on Rails (primarily a PHP shop). Interacted regularly with clients to collaborate on design, workflow, and content strategy. Designed and assisted in the implementation of almost a dozen websites.
     %p.date Summer 2009 &#8211; Winter 2010
 
   %li
@@ -89,7 +89,7 @@
 %ol
   %li
     %h3 Technologies
-    %p Experimenting and exploring things like RDF/OWL, Node.js, UX, and a little machine learning.
+    %p Experimenting and exploring RDF/OWL, Node.js, UX, and a little machine learning.
 
     
 %h2 Education
