--- a/views/styles.sass
+++ b/views/styles.sass
@@ -68,7 +68,7 @@ h3
   :margin-bottom 3px
   
   i
-    :color $normal
+    :color $subdued - #111
     
   .note
     @extend em
@@ -95,11 +95,12 @@ a
   :margin-bottom $section_break
     
 .desc
-  :margin-bottom 5px
+  :margin-bottom 3px
 
 .date
   @extend h4
   :font-size 10px
+  :color $subdued - #111
 
 footer
   p
