--- a/views/work.haml
+++ b/views/work.haml
@@ -1,46 +1,64 @@
-%h2 Code Samples
+%h2 Websites, Plugins, &amp; Experiments
 
 %ol
   %li 
-    %h3 Something interesting
-    %p [Code Block]
+    %img{ :src => "" }
+    %h3 
+      EditableSet 
+      %i jQuery Plugin (Sinatra)
+    %p 
+      %a{ :href => "http://editable-set.heroku.com" } http://editable-set.heroku.com 
+      | 
+      %a{ :href => "http://github.com/miwillhite/editable-set" } http://github.com/miwillhite/editable-set
 
   %li 
-    %h3 Something interesting
-    %p [Code Block]
+    %img{ :src => "" }
+    %h3 
+      Balanced Energy Solutions 
+      %i Business Website (Sinatra)
+    %p 
+      %i Once you visit the site, click on the <b>&ldquo;services&rdquo;</b> tab to see a jQuery mashup.
+      %br
+      %a{ :href => "http://balanced-energy-solutions.heroku.com" } http://balanced-energy-solutions.heroku.com
 
   %li 
-    %h3 Something interesting
-    %p [Code Block]
-    
-
-%h2 Sample Sites
-
-%ol
-  %li 
-    %h3 Something interesting
-    %p [Screencap and link]
+    %img{ :src => "" }
+    %h3 
+      Sunny Dawn
+      %i Business Website (Rails)
+    %p 
+      %a{ :href => "http://sunnydawn.com" } http://sunnydawn.com
 
   %li 
-    %h3 Something interesting
-    %p [Screencap and link]
+    %img{ :src => "" }
+    %h3 
+      Cookie Jar 
+      %i Experiment (Rails)
+    %p 
+      %a{ :href => "http://cookie-jar.heroku.com" } http://cookie-jar.heroku.com
+      |
+      %a{ :href => "http://github.com/miwillhite/Cookie-Jar" } http://github.com/miwillhite/Cookie-Jar
 
   %li 
-    %h3 Something interesting
-    %p [Screencap and link]
-
-
-%h2 Interface and Graphic Design
-
-%ol
-  %li 
-    %h3 Something interesting
-    %p [Img]
+    %img{ :src => "" }
+    %h3 
+      Portable Display Success
+      %i Promotional Website (Rails)
+    %p 
+      %a{ :href => "http://portabledisplaysuccess.com" } http://portabledisplaysuccess.com
 
   %li 
-    %h3 Something interesting
-    %p [Img]
+    %img{ :src => "" }
+    %h3 
+      Redbud Remedies
+      %i Business Website (Rails - My first)
+    %p 
+      %a{ :href => "http://redbudremedies.com" } http://redbudremedies.com
 
   %li 
-    %h3 Something interesting
-    %p [Img]
+    %img{ :src => "" }
+    %h3 
+      Squid Graphic Design
+      %i Business Website (My wife and I&rsquo;s former business venture)
+    %p 
+      %a{ :href => "http://squidgraphicdesign.com" } http://squidgraphicdesign.com
