--- a/views/work.haml
+++ b/views/work.haml
@@ -6,6 +6,7 @@
     %h3 
       EditableSet 
       %i jQuery Plugin (Sinatra)
+    %p I created this plugin for my current employer. It is a jQuery edit-in-place editor that allows the user to edit an entire form at once (vs a single field).
     %p 
       %a{ :href => "http://editable-set.heroku.com" } http://editable-set.heroku.com 
       | 
@@ -16,9 +17,9 @@
     %h3 
       Balanced Energy Solutions 
       %i Business Website (Sinatra)
+    %p
+      This site was a client project that I did for my company Squid. After navigating to the website, <b>click &ldquo;services&rdquo;</b> to see a widget that I built on top of jQuery Tools.
     %p 
-      %i Once you visit the site, click on the <b>&ldquo;services&rdquo;</b> tab to see a jQuery mashup.
-      %br
       %a{ :href => "http://balanced-energy-solutions.heroku.com" } http://balanced-energy-solutions.heroku.com
 
   %li 
@@ -26,6 +27,7 @@
     %h3 
       Sunny Dawn
       %i Business Website (Rails)
+    %p I put together Manifest Web Design&rsquo;s first Rails app. It has a weekly mailer, blog, store, and page management system.
     %p 
       %a{ :href => "http://sunnydawn.com" } http://sunnydawn.com
 
@@ -34,6 +36,8 @@
     %h3 
       Cookie Jar 
       %i Experiment (Rails)
+    %p
+      This app was inspired by an article in <a href="http://railsmagazine.com/">Rails Magazine</a> by Michelangelo Altamore. I built it to practice TDD and jQuery.
     %p 
       %a{ :href => "http://cookie-jar.heroku.com" } http://cookie-jar.heroku.com
       |
@@ -44,6 +48,7 @@
     %h3 
       Portable Display Success
       %i Promotional Website (Rails)
+    %p My first Rails app&hellip;well, one of two. I built this and Redbud Remedies alongside each other to learn Rails. The user can manage issues, blog articles, surveys and Q&amp;A.
     %p 
       %a{ :href => "http://portabledisplaysuccess.com" } http://portabledisplaysuccess.com
 
@@ -51,7 +56,8 @@
     %img{ :src => "" }
     %h3 
       Redbud Remedies
-      %i Business Website (Rails - My first)
+      %i Business Website (Rails)
+    %p My other &ldquo;first&rdquo;. I built this with an outdated Rails walkthrough as a guide. It has a full product/order management system and is integrated with Paypal&rsquo;s Payments Pro.
     %p 
       %a{ :href => "http://redbudremedies.com" } http://redbudremedies.com
 
@@ -59,6 +65,7 @@
     %img{ :src => "" }
     %h3 
       Squid Graphic Design
-      %i Business Website (My wife and I&rsquo;s former business venture)
+      %i Business Website
+    %p My partner and I&rsquo;s former business venture website. More of my design (and my wife/partner) work can be seen here under the <b>&ldquo;services&rdquo;</b> tab.
     %p 
       %a{ :href => "http://squidgraphicdesign.com" } http://squidgraphicdesign.com
