Added images for work page

--- a/views/case_study.haml
+++ b/views/case_study.haml
@@ -1,5 +1,5 @@
 %section
-  %h2 Project Name: <b>Stella</b>
+  %h2 Project Name: <i>Stella</i>
   %p Stella is a Rails based Electronic Medical Records software product. It is deployed in doctor's offices around the country. This is the first web-based version (v8) of the product. Because this project is still underway there are no live links. Below, I have highlighted some of my more significant contributions to the project.
 
 
