--- a/views/work.haml
+++ b/views/work.haml
@@ -1,8 +1,8 @@
-%h2 Websites, Plugins, &amp; Experiments
-
+%h2 Plugins
 %ol
   %li 
-    %img{ :src => "" }
+    %a{ :href => "http://editable-set.heroku.com" } 
+      %img{ :src => "/images/editable_set.png", :alt => "EditableSet jQuery Plugin" }
     %h3 
       EditableSet 
       %i jQuery Plugin (Sinatra)
@@ -12,27 +12,12 @@
       | 
       %a{ :href => "http://github.com/miwillhite/editable-set" } http://github.com/miwillhite/editable-set
 
-  %li 
-    %img{ :src => "" }
-    %h3 
-      Balanced Energy Solutions 
-      %i Business Website (Sinatra)
-    %p
-      This site was a client project that I did for my company Squid. After navigating to the website, <b>click &ldquo;services&rdquo;</b> to see a widget that I built on top of jQuery Tools.
-    %p 
-      %a{ :href => "http://balanced-energy-solutions.heroku.com" } http://balanced-energy-solutions.heroku.com
 
+%h2 Experiments
+%ol
   %li 
-    %img{ :src => "" }
-    %h3 
-      Sunny Dawn
-      %i Business Website (Rails)
-    %p I put together Manifest Web Design&rsquo;s first Rails app. It has a weekly mailer, blog, store, and page management system.
-    %p 
-      %a{ :href => "http://sunnydawn.com" } http://sunnydawn.com
-
-  %li 
-    %img{ :src => "" }
+    %a{ :href => "http://cookie-jar.heroku.com" }
+      %img{ :src => "/images/cookie_jar.png", :alt => "Cookie Jar App" }
     %h3 
       Cookie Jar 
       %i Experiment (Rails)
@@ -43,8 +28,32 @@
       |
       %a{ :href => "http://github.com/miwillhite/Cookie-Jar" } http://github.com/miwillhite/Cookie-Jar
 
+
+%h2 Websites
+%ol
   %li 
-    %img{ :src => "" }
+    %a{ :href => "http://balanced-energy-solutions.heroku.com" } 
+      %img{ :src => "/images/balanced_energy_solutions.png", :alt => "Redbud Remedies Website" }
+    %h3 
+      Balanced Energy Solutions 
+      %i Business Website (Sinatra)
+    %p This site was a client project that I did for my company Squid. After navigating to the website, <b>click &ldquo;services&rdquo;</b> to see a widget that I built on top of jQuery Tools.
+    %p 
+      %a{ :href => "http://balanced-energy-solutions.heroku.com" } http://balanced-energy-solutions.heroku.com
+
+  %li 
+    %a{ :href => "http://sunnydawn.com" }
+      %img{ :src => "/images/sunny_dawn.png", :alt => "Sunny Dawn Website" }
+    %h3 
+      Sunny Dawn
+      %i Business Website (Rails)
+    %p I put together Manifest Web Design&rsquo;s first Rails app. It has a weekly mailer, blog, store, and page management system.
+    %p 
+      %a{ :href => "http://sunnydawn.com" } http://sunnydawn.com
+
+  %li 
+    %a{ :href => "http://portabledisplaysuccess.com" }
+      %img{ :src => "/images/portable_display_success.png", :alt => "Portable Display Success Website" }
     %h3 
       Portable Display Success
       %i Promotional Website (Rails)
@@ -53,7 +62,8 @@
       %a{ :href => "http://portabledisplaysuccess.com" } http://portabledisplaysuccess.com
 
   %li 
-    %img{ :src => "" }
+    %a{ :href => "http://redbudremedies.com" }
+      %img{ :src => "/images/redbud_remedies.png", :alt => "Redbud Remedies Website" }
     %h3 
       Redbud Remedies
       %i Business Website (Rails)
@@ -62,7 +72,8 @@
       %a{ :href => "http://redbudremedies.com" } http://redbudremedies.com
 
   %li 
-    %img{ :src => "" }
+    %a{ :href => "http://squidgraphicdesign.com" }
+      %img{ :src => "/images/squid_graphic_design.png", :alt => "Squid Graphic Design Website" }
     %h3 
       Squid Graphic Design
       %i Business Website
