Messing with styles

--- a/views/resume.haml
+++ b/views/resume.haml
@@ -76,7 +76,7 @@
   %li
     %h3 Community
     %p To write, contribute, and release more code. 
-    %p Teaching, to better educate others as well as myself. I aspire to speak at conferences and help out at local workshops.
+    %p Teaching, to better educate others as well as myself. I aspire to speak at conferences and help out at local workshops. I have recently signed up to be a mentor at <a href="http://railsmentors.org">RailsMentors</a>.
     %p To participate in more local groups (currently I frequent <a href="http://refreshpdx.com">Portland Refresh</a>, <a href="http://pdxruby.com">Portland Ruby Brigade</a>, <a href="http://pdxjs.com/">Portland Javascript Admirers</a>, and the newly formed <a href="http://www.meetup.com/pdxsemweb/">Semantic Web Interest Group</a>).
     
   %li
