--- a/views/work.haml
+++ b/views/work.haml
@@ -1,4 +1,4 @@
-%h2 Plugins
+%h2 Plugins &amp; Experiments
 %ol
   %li 
     %a{ :href => "http://editable-set.heroku.com" } 
@@ -6,15 +6,12 @@
     %h3 
       EditableSet 
       %i jQuery Plugin (Sinatra)
-    %p I created this plugin for my current employer. It is a jQuery edit-in-place editor that allows the user to edit an entire form at once (vs a single field).
+    %p I wrote this for one of my current employer&rsquo;s projects. It is a jQuery edit-in-place plugin that allows the user to edit an entire form at once (versus a single field).
     %p 
       %a{ :href => "http://editable-set.heroku.com" } http://editable-set.heroku.com 
       | 
       %a{ :href => "http://github.com/miwillhite/editable-set" } http://github.com/miwillhite/editable-set
 
-
-%h2 Experiments
-%ol
   %li 
     %a{ :href => "http://cookie-jar.heroku.com" }
       %img{ :src => "/images/cookie_jar.png", :alt => "Cookie Jar App" }
@@ -22,7 +19,7 @@
       Cookie Jar 
       %i Experiment (Rails)
     %p
-      This app was inspired by an article in <a href="http://railsmagazine.com/">Rails Magazine</a> by Michelangelo Altamore. I built it to practice TDD and jQuery.
+      This app was inspired by an article in <a href="http://railsmagazine.com/">Rails Magazine</a> by Michelangelo Altamore. <br /> I wrote this to practice TDD and experiment with my own ideas.
     %p 
       %a{ :href => "http://cookie-jar.heroku.com" } http://cookie-jar.heroku.com
       |
@@ -37,7 +34,7 @@
     %h3 
       Balanced Energy Solutions 
       %i Business Website (Sinatra)
-    %p This site was a client project that I did for my company Squid. After navigating to the website, <b>click &ldquo;services&rdquo;</b> to see a widget that I built on top of jQuery Tools.
+    %p This site was a client project that I did as Squid Graphic Design. After navigating to the website, <b>click &ldquo;services&rdquo;</b> to see a widget that I built on top of jQuery Tools.
     %p 
       %a{ :href => "http://balanced-energy-solutions.heroku.com" } http://balanced-energy-solutions.heroku.com
 
@@ -47,7 +44,7 @@
     %h3 
       Sunny Dawn
       %i Business Website (Rails)
-    %p I put together Manifest Web Design&rsquo;s first Rails app. It has a weekly mailer, blog, store, and page management system.
+    %p Manifest Web Design&rsquo;s first Rails app. I took this project from client consultation to deploy. It has a weekly mailer, blog, store, and content management system.
     %p 
       %a{ :href => "http://sunnydawn.com" } http://sunnydawn.com
 
@@ -67,7 +64,7 @@
     %h3 
       Redbud Remedies
       %i Business Website (Rails)
-    %p My other &ldquo;first&rdquo;. I built this with an outdated Rails walkthrough as a guide. It has a full product/order management system and is integrated with Paypal&rsquo;s Payments Pro.
+    %p My other &ldquo;first&rdquo;. I built this with an outdated Rails book as a guide. It has a full product/order management system and is integrated with Paypal&rsquo;s Payments Pro.
     %p 
       %a{ :href => "http://redbudremedies.com" } http://redbudremedies.com
 
@@ -77,6 +74,6 @@
     %h3 
       Squid Graphic Design
       %i Business Website
-    %p My partner and I&rsquo;s former business venture website. More of my design (and my wife/partner) work can be seen here under the <b>&ldquo;services&rdquo;</b> tab.
+    %p My wife and I&rsquo;s former design business. More of my design work can be seen here under the <b>&ldquo;services&rdquo;</b> tab.
     %p 
       %a{ :href => "http://squidgraphicdesign.com" } http://squidgraphicdesign.com
