--- a/views/styles.sass
+++ b/views/styles.sass
@@ -41,7 +41,6 @@ header
   :line-height 1.2em
   
 header, nav, ol
-  :max-width 600px
   :display block
   :margin-bottom $section_break
   ol li
@@ -108,6 +107,9 @@ i
   :font-style italic
   :text-transform none
   :letter-spacing 0
+  
+p
+  :margin-bottom 9px
 
 a
   img
@@ -127,6 +129,7 @@ img
     :top -4px
   
 section 
+  :max-width 600px
   :margin-bottom $section_break
   img
     :margin-top 0
